# agentic-sysdesign

./: .env.example  .fun-summary.md  .gitignore  AGENTS.md  FUN.md  Makefile  README.md  docker-compose.yml  moon.yml  package.json  pnpm-lock.yaml  pyproject.toml
.claude/skills/scrape-signals/: SKILL.md  scrape_hn.py  scrape_ig.py  watchlist.json
.cursor/: environment.json
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.github/actions/setup-ant/: action.yml
.github/workflows/: agent-deploy.yml  agent-ts-ci.yml  ci.yml  preview-env.yml
.moon/: toolchain.yml  workspace.yml
apps/chat-web/: moon.yml  package.json
backend/: .env.example  Makefile  openapi.json  pyproject.toml  railway.api.json  railway.worker.json
backend/api/: main.py  mcp_server.py  models.py
backend/common/: db.py  digests.py  env.py  hashing.py  rating.py  seed.py  signals.py
backend/db/: migrate.py
backend/db/migrations/: 20260708000002_monthly_partitions.sql  20260708000003_influencer_signals_schema.sql  20260708000004_older_partitions.sql  20260709000001_runs_table.sql  20260710000001_signal_ratings.sql  20260711000002_runs_rating_status.sql
backend/drills/: explain-drills.sql
backend/m5_agents/: agent.yaml  agentctl.py  apply.sh  deploy.py  deployment.yaml  digest.agent.yaml  environment.yaml  resources.json  run_digest.py  sandbox.env.yaml
backend/m5_agents/vault/: api-key.yaml
backend/tests/: conftest.py  test_api_integration.py  test_env.py  test_hashing.py  test_models.py  test_rating.py
backend/worker/: celery_app.py  scrape.py  tasks.py
common/: db.py  partitions.sql  schema.sql  seed.py
db/migrations/: 20260708000001_initial_schema.sql
docs/: embeddings-local.md  how-storage-really-works.md  llm-foundations.md  messaging-step-1-single-instance.md  messaging-step-2-redis-pubsub.md  module-1.md  module-2.md  module-5.md  module-6.md
drills/: explain-drills.sql
frontend/: .gitkeep
infra/: README.md  railway-env.py  railway-preview.py  railway-preview.sh
infra/railway/: .gitignore  README.md  main.tf  outputs.tf  provider.tf  terraform.tfvars.example  variables.tf  versions.tf
services/agent/: moon.yml  railway.json
services/agent-ts/: README.md  knip.config.ts  moon.yml  package-lock.json  package.json  railway.json  tsconfig.json
services/agent-ts/src/: cli.ts  index.ts  loop.ts  server.ts  tools.ts  trace.ts  types.ts
services/agent-ts/test/: loop.test.ts
services/agent/agent/: __main__.py  _trace.py
services/agent/tests/: test_loop.py
services/api/: moon.yml  openapi.json  pyproject.toml  railway.json
services/api/api/: main.py  mcp_server.py  models.py
services/api/tests/: conftest.py  test_api_integration.py  test_models.py  test_vibes.py
services/chat/: README.md  moon.yml  pyproject.toml  railway.json
services/chat/chat/: main.py
services/managed-agents/: agent.yaml  agentctl.py  moon.yml
services/worker/: moon.yml  pyproject.toml  railway.json
services/worker/worker/: backfill.py  celery_app.py  scrape.py  tasks.py
