[project]
name = "sysdesign-m1-data-model"
version = "0.1.0"
description = "Module 1 of the system-design build guide. Partitioned Postgres schema, per-partition indexes, a read-path materialized view, and EXPLAIN drills."
requires-python = ">=3.13"
dependencies = [
  "psycopg[binary]>=3.2",
]

[tool.uv]
package = false
