[project]
name = "sysdesign-backend"
version = "0.1.0"
description = "Backend for the system-design build guide (competitor-intelligence pipeline). Module 1: partitioned Postgres schema, per-partition indexes, a read-path materialized view, and EXPLAIN drills. Later modules add the FastAPI surface, Celery fan-out, and more."
requires-python = ">=3.13"
dependencies = [
  "psycopg[binary]>=3.2",
  "psycopg-pool>=3.2",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  # Module 2: background fan-out + live progress.
  "celery>=5.4",          # task queue: fan-out (group) + fan-in (chord), Redis broker
  "redis>=5.0",           # broker/result-backend client + the pub/sub bus for progress
  "sse-starlette>=2.1",   # EventSourceResponse: FastAPI-native SSE (disconnect + keep-alive)
]

[tool.uv]
package = false
