[project]
name = "sysdesign-backend"
version = "0.1.0"
description = "Backend for the system-design build guide (competitor-intelligence pipeline). Module 1: partitioned Postgres schema, per-partition indexes, a read-path materialized view, and EXPLAIN drills. Later modules add the FastAPI surface, Celery fan-out, and more."
requires-python = ">=3.13"
dependencies = [
  "psycopg[binary]>=3.2",
  "psycopg-pool>=3.2",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  # Module 2: background fan-out + live progress.
  "celery>=5.4", # task queue: fan-out (group) + fan-in (chord), Redis broker
  "redis>=5.0", # broker/result-backend client + the pub/sub bus for progress
  "sse-starlette>=2.1", # EventSourceResponse: FastAPI-native SSE (disconnect + keep-alive)
  # Module 4: LangSmith tracing for the rating model call (standalone @traceable, no LangChain).
  "langsmith>=0.10.2",
  "anthropic>=0.116.0",
  "mcp>=1.13",
]

[tool.uv]
package = false

[dependency-groups]
# Dev-only tooling. `uv sync` installs these by default; prod images can skip them
# with `uv sync --no-dev`. Kept out of [project.dependencies] so the runtime deps
# list stays honest about what the app itself needs.
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "httpx>=0.27", # required by starlette/fastapi TestClient in the API tests
]

[tool.ruff]
# Generous width: the codebase intentionally runs long inline comments (own-the-interface
# explanations) up to ~126 cols, so a tighter limit would be noise, not signal.
line-length = 130
target-version = "py313"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes (unused imports/names, real bugs), I import sorting,
# UP pyupgrade, B bugbear. A pragmatic core, not the whole rulebook.
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency markers are meant to be called in argument defaults (that's the whole
# DI mechanism), so B008 is a false positive for them. Whitelist the ones this API uses.
extend-immutable-calls = ["fastapi.Query", "fastapi.Depends", "fastapi.Path", "fastapi.Header"]

[tool.pytest.ini_options]
# Tests import the app's top-level packages (api, common, worker); package = false means
# there's no install step, so put backend/ on sys.path. `integration` marks tests that need
# a live Postgres (auto-skipped when it's unreachable, see tests/conftest.py).
pythonpath = ["."]
testpaths = ["tests"]
markers = [
  "integration: needs a live Postgres/Redis (skipped when the DB is unreachable)",
]
