[project]
name = "sysdesign-worker"
version = "0.1.0"
description = "The Celery worker: scrape fan-out (chord), rating stage, beat backstops. Owns ALL Celery orchestration; the API reaches it only by task name via sysdesign-task-contract."
requires-python = ">=3.13"
dependencies = [
  "sysdesign-core",
  "sysdesign-task-contract",
  "celery>=5.4",        # task queue: fan-out (group) + fan-in (chord), Redis broker
  "redis>=5.0",         # broker/result-backend client + the pub/sub bus for progress
  "psycopg[binary]>=3.2",
]

[tool.uv.sources]
sysdesign-core = { workspace = true }
sysdesign-task-contract = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]
